{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 89,
  "lineage": "d60afd2b-a778-c95f-a9cb-1bbfae28fd43",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-all-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-04-12T02:13:44.159-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcpstudy-420008/global/firewalls/allow-all-egress",
            "log_config": [],
            "name": "allow-all-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/global/networks/network1",
            "priority": 1000,
            "project": "gcpstudy-420008",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/global/firewalls/allow-all-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-all-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-04-12T02:13:44.101-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcpstudy-420008/global/firewalls/allow-all-ingress",
            "log_config": [],
            "name": "allow-all-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/global/networks/network1",
            "priority": 1000,
            "project": "gcpstudy-420008",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/global/firewalls/allow-all-ingress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "web"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-12T02:47:02.512-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcpstudy-420008/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/global/networks/network1",
            "priority": 1000,
            "project": "gcpstudy-420008",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/zones/us-east1-c/disks/master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcpstudy-420008/zones/us-east1-c/instances/master",
            "instance_id": "521812948735661238",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "yTFSFbaUi4I=",
            "name": "master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/global/networks/network1",
                "network_ip": "10.142.0.14",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/regions/us-east1/subnetworks/network1",
                "subnetwork_project": "gcpstudy-420008"
              }
            ],
            "project": "gcpstudy-420008",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/zones/us-east1-c/instances/master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "minikube-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/zones/us-east1-c/disks/minikube"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcpstudy-420008/zones/us-east1-c/instances/minikube",
            "instance_id": "3960875184848813370",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "yTFSFbaUi4I=",
            "name": "minikube",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.23.49.182",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/global/networks/network1",
                "network_ip": "10.142.0.17",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/regions/us-east1/subnetworks/network1",
                "subnetwork_project": "gcpstudy-420008"
              }
            ],
            "project": "gcpstudy-420008",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/zones/us-east1-c/instances/minikube",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mydevops",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/zones/us-east1-c/disks/worker1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcpstudy-420008/zones/us-east1-c/instances/worker1",
            "instance_id": "8900955983276574644",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "yTFSFbaUi4I=",
            "name": "worker1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/global/networks/network1",
                "network_ip": "10.142.0.16",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/regions/us-east1/subnetworks/network1",
                "subnetwork_project": "gcpstudy-420008"
              }
            ],
            "project": "gcpstudy-420008",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/zones/us-east1-c/instances/worker1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gcpstudy-420008/global/networks/network1",
            "mtu": 0,
            "name": "network1",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2548292451587933683",
            "project": "gcpstudy-420008",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpstudy-420008/global/networks/network1"
          }
        }
      ]
    }
  ]
}